add cube style & animation

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   <body>
     <section class="container">
       <div class="cube">
-        <div class="face front">front</div>
-        <div class="face back">back</div>
-        <div class="face right">right</div>
-        <div class="face left">left</div>
-        <div class="face top">top</div>
-        <div class="face bottom">bottom</div>
+        <div class="face front">Bartek cmkoka Kube w trompke</div>
+        <div class="face back">Maciek cmoka Bartka w pompke</div>
+        <div class="face right">hahahahah</div>
+        <div class="face left">Bartek cmkoka Kube w trompke</div>
+        <div class="face top">hahahahah</div>
+        <div class="face bottom">Maciek cmoka Bartka w pompke</div>
       </div>
     </section>
   </body>
